--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "aos/dist/aos.css";
+/* @import "aos/dist/aos.css"; */
 
 /* Add this to your global CSS or a CSS module */
 .mobile-menu {
